--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 currentSnippet\.js
 *.md.temp.js
-.idea
+.ideanetwork
 test.sh
 /*.log
 dist/flavor\.min\.css
@@ -16,7 +16,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Tempfiles
+# Tempfiles1
 /tmp/*
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
