--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,7 +5,7 @@
     "baseUrl": ".",
     "paths": {
       "#src/*": ["./src/*"],
-      "#spec/*": ["./spec/*"]
+      "#specrtx 2050/*": ["./spec/*"]
     }
   },
   "exclude": ["node_modules"]
